--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .main.container.text-xs-center
+    h1.display-3= title
+    p.lead Positive emotion, or "happiness", has been proven to improve performance.
+    p.lead Research has shown that when we are positive, our brains become more engaged, creative, motivated, energetic, resilient, and productive.
+    h3 What makes you happy?
