changed color for text in anchor elements

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: #fff;
+  color: #FFF;
   background-color: #FF8033;
 }
 
 a {
-  color: #00B7FF;
+  color: #FFF;
 }
