--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,22 @@
 extends layout
 
 block content
-  .main.container.text-xs-center
+  .main.container.text-sm-center
     h1.display-3= title
     p.lead Positive emotion, or "happiness", has been proven to improve performance.
     p.lead Research has shown that when we are positive, our brains become more engaged, creative, motivated, energetic, resilient, and productive.
     h3 What makes you happy?
+    .row
+      .card-deck
+        .card.bg-warning
+          img.card-img-top(src="http://placeimg.com/640/480/animals", alt="image of dog")
+          .card-body
+            a.btn.btn-lg(href="/photos") Cute Photos
+        .card
+          img.card-img-top(src="http://placeimg.com/640/480/people", alt="image of dog")
+          .card-body.bg-warning
+            a.btn.btn-outline-light.btn-lg(href="/gifs") Funny Gifs
+        .card
+          img.card-img-top(src="http://placeimg.com/640/480/tech", alt="image of dog")
+          .card-body
+            a.btn.btn-outline-warning.btn-lg.text-black(href="/quotes") Motivational Qoutes
