changed class names for styling

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,15 +8,15 @@ block content
     h3 What makes you happy?
     .row
       .card-deck
-        .card.bg-warning
+        .card.bg-outline-dark
           img.card-img-top(src="http://placeimg.com/640/480/animals", alt="image of dog")
-          .card-body
-            a.btn.btn-lg(href="/photos") Cute Photos
+          .card-body.bg-warning
+            a.btn.btn-outline-light.btn-lg(href="/photos") Cute Photos
         .card
           img.card-img-top(src="http://placeimg.com/640/480/people", alt="image of dog")
           .card-body.bg-warning
             a.btn.btn-outline-light.btn-lg(href="/gifs") Funny Gifs
         .card
           img.card-img-top(src="http://placeimg.com/640/480/tech", alt="image of dog")
-          .card-body
-            a.btn.btn-outline-warning.btn-lg.text-black(href="/quotes") Motivational Qoutes
+          .card-body.bg-warning
+            a.btn.btn-outline-light.btn-lg(href="/quotes") Motivational Qoutes
