moved navbar from layout to individual templates

--- a/views/photos.pug
+++ b/views/photos.pug
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+
+  include navbar
+  
   .container.text-sm-center
     .row.justify-content-center
       a.btn.btn-outline-light.btn-lg.bg-warning(href="/puppies") Puppies
