--- a/views/quotes.pug
+++ b/views/quotes.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
 
+  include navbar
+
   .container.text-sm-center
     h1.display-3 "Do or do not. There is no try."
     h2 - Yoda
