--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -5,13 +5,18 @@ block content
   include navbar
   
   .container.text-sm-center
-    .row.justify-content-center
-      a.btn.btn-outline-light.btn-lg.bg-warning(href="/animal") Animals
-      a.btn.btn-outline-light.btn-lg.bg-warning(href="/memes") Memes
-      a.btn.btn-outline-light.btn-lg.bg-warning(href="/funny") Funny
-    .d-flex.justify-content-center
-      .input-group.col-6.mb-3
-        input.form-control(type="text", placeholder="Search Gifs", aria-label="Search Gifs", aria-describedby="basic-addon2")
-        .input-group-append
-          button.btn.btn-warning.text-light(type="button") Search
-    h1.display-3 Funny Gifs
+    //- .row.justify-content-center
+    //-   a.btn.btn-outline-light.btn-lg.bg-warning(href="/animal") Animals
+    //-   a.btn.btn-outline-light.btn-lg.bg-warning(href="/memes") Memes
+    //-   a.btn.btn-outline-light.btn-lg.bg-warning(href="/funny") Funny
+    //- .d-flex.justify-content-center
+    //-   .input-group.col-6.mb-3
+    //-     input.form-control(type="text", placeholder="Search Gifs", aria-label="Search Gifs", aria-describedby="basic-addon2")
+    //-     .input-group-append
+    //-       button.btn.btn-warning.text-light(type="button") Search
+    h1.display-3 Cute Animal Gifs
+    .row
+      each gif in gifs
+        .col-lg-3.col-md-4.col-sm-6
+          .d-block.mb-4.h-100
+            img.img-fluid.img-thumbnail(src=""+gif.url+"")
