added image for gifs link

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ block content
           .card-body.bg-warning
             a.btn.btn-outline-light.btn-lg(href="/photos") Cute Photos
         .card
-          img.card-img-top(src="http://placeimg.com/640/480/people", alt="image of dog")
+          img.card-img-top(src="/images/elmo.gif", alt="image of dog")
           .card-body.bg-warning
             a.btn.btn-outline-light.btn-lg(href="/gifs") Funny Gifs
         .card
