added placeholde image for cute photos

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,11 +9,11 @@ block content
     .row
       .card-deck
         .card.bg-outline-dark
-          img.card-img-top(src="http://placeimg.com/640/480/animals", alt="image of dog")
+          img.card-img-top(src="/images/birdie.jpg", alt="image of smiling dog")
           .card-body.bg-warning
             a.btn.btn-outline-light.btn-lg(href="/photos") Cute Photos
         .card
-          img.card-img-top(src="/images/elmo.gif", alt="image of dog")
+          img.card-img-top(src="/images/elmo.gif", alt="image of elmo on fire")
           .card-body.bg-warning
             a.btn.btn-outline-light.btn-lg(href="/gifs") Funny Gifs
         .card
