--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -14,7 +14,7 @@ block content
     //-     input.form-control(type="text", placeholder="Search Gifs", aria-label="Search Gifs", aria-describedby="basic-addon2")
     //-     .input-group-append
     //-       button.btn.btn-warning.text-light(type="button") Search
-    h1.display-3 Cute Animal Gifs
+    h1.display-3.my-5 Cute Animal Gifs
     .row
       each gif in gifs
         .col-lg-3.col-md-4.col-sm-6
