--- a/views/photos.pug
+++ b/views/photos.pug
@@ -14,7 +14,7 @@ block content
     //-     input.form-control(type="text", placeholder="Search Photos", aria-label="Search Photos", aria-describedby="basic-addon2")
     //-     .input-group-append
     //-       button.btn.btn-warning.text-light(type="button") Search
-    h1.display-3 Dogs Surfing Photos
+    h1.display-3.my-5 Dogs Surfing Photos
     .row
       each photo in photos
         .col-lg-3.col-md-4.col-sm-6
