removed unused class

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .main.container.text-sm-center
+  .container.text-sm-center
     h1.display-3.mb-5= title
     p.lead Positive emotion, or "happiness", has been proven to improve performance.
     p.lead Research has shown that when we are happy, our brains become more engaged, more creative, and more productive.
