--- a/views/error.pug
+++ b/views/error.pug
@@ -1,8 +1,6 @@
 extends layout
 
 block content
-  .main.container
-    .row.text-xs-center
-      .col-md-6.col-md-offset-3.p-t-2
-        i.icn-person.material-icons error
-        p.lead.m-t-2= message
+  .container.text-sm-center
+    i.icn-person.material-icons.mb-3 error
+    h1.display-4.lead.m-t-2= message
