--- a/views/quotes.pug
+++ b/views/quotes.pug
@@ -5,7 +5,7 @@ block content
   include navbar
 
   .container.text-sm-center
-    h1.display-3.mt-5.mb-3 #{quotation}
+    h1.display-3.mt-5.mb-3 "#{quotation}"
     .text-sm-right
       h2 - #{source}
     .justify-content-center.mt-5
