--- a/views/photos.pug
+++ b/views/photos.pug
@@ -4,7 +4,7 @@ block content
 
   include navbar
   
-  .container.text-sm-center
+  .container.text-center
     //- .row.justify-content-center
     //-   a.btn.btn-outline-light.btn-lg.bg-warning(href="/puppies") Puppies
     //-   a.btn.btn-outline-light.btn-lg.bg-warning(href="/pandas") Pandas
@@ -14,7 +14,7 @@ block content
     //-     input.form-control(type="text", placeholder="Search Photos", aria-label="Search Photos", aria-describedby="basic-addon2")
     //-     .input-group-append
     //-       button.btn.btn-warning.text-light(type="button") Search
-    h1.display-3.my-5 Dogs Surfing Photos
+    h1.display-3.my-5 Cute Photos
     .row
       each photo in photos
         .col-lg-3.col-md-4.col-sm-6
