--- a/views/quotes.pug
+++ b/views/quotes.pug
@@ -4,7 +4,7 @@ block content
 
   include navbar
 
-  .container.text-sm-center
+  .container.text-center
     h1.display-3.mt-5.mb-3 "#{quotation}"
     .text-sm-right
       h2 - #{source}
