--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  .container.text-sm-center
+  .container.text-center
     i.icn-person.material-icons.mb-3 error
-    h1.display-4.lead.m-t-2= message
+    h1.display-4.lead.mt-2= message
