--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title The Happiness Primer
+    title= title
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css", integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO", crossorigin="anonymous")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
     link(rel="stylesheet", href="/stylesheets/style.css")
