--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,17 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: #FFF;
-  background-color: #FF8033;
+  color: #fff;
+  background-color: #ff8033;
 }
 
 a {
-  color: #FFF;
+  color: #fff;
+}
+
+a:hover {
+  color: #fff;
+  transform: scale(1.1);
 }
 
 .btn {
