revised navbar related routes to add weight to the link to the current view

--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  include navbar
+  include navbar-gifs
   
   .container.text-center
     //- .row.justify-content-center
