--- a/views/quotes.pug
+++ b/views/quotes.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  include navbar
+  include navbar-quotes
 
   .container.text-center
     h1.display-3.mt-5.mb-3 "#{quotation}"
@@ -10,4 +10,3 @@ block content
       h2 - #{source}
     .justify-content-center.mt-5
       a.btn.btn-outline-light.btn-lg.bg-warning(href="/quotes") New Quote
-      
