--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -15,6 +15,11 @@ block content
     //-     .input-group-append
     //-       button.btn.btn-warning.text-light(type="button") Search
     h1.display-3.my-5 Funny Gifs
+    .d-flex.justify-content-center
+      .input-group.col-6.mb-3
+        input.form-control(class="giphy-search" type="text", placeholder="Search Photos", aria-label="Search Photos", aria-describedby="basic-addon2")
+        .input-group-append
+          button.btn.btn-warning.text-light(type="button") Search
     .row
       each gif in gifs
         .col-lg-3.col-md-4.col-sm-6
