--- a/views/photos.pug
+++ b/views/photos.pug
@@ -15,6 +15,11 @@ block content
     //-     .input-group-append
     //-       button.btn.btn-warning.text-light(type="button") Search
     h1.display-3.my-5 Cute Photos
+    .d-flex.justify-content-center
+      .input-group.col-6.mb-3
+        input.form-control(class="flickr-search" type="text", placeholder="Search Photos", aria-label="Search Photos", aria-describedby="basic-addon2")
+        .input-group-append
+          button.btn.btn-warning.text-light(type="button") Search
     .row
       each photo in photos
         .col-lg-3.col-md-4.col-sm-6
