search feature working

--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -7,7 +7,7 @@ block content
   .container.text-center
     h1.display-3.my-5 Funny Gifs
     .d-flex.justify-content-center
-      form.col-6.mb-3(action="/gifs/search", method="get")
+      form.col-6.mb-3(action="/gifs", method="get")
         .input-group
           input.form-control(class="giphy-search", name="query", type="search", placeholder="Search Gifs...", aria-label="Search Gifs", aria-describedby="basic-addon2")
           .input-group-append
