--- a/views/photos.pug
+++ b/views/photos.pug
@@ -5,10 +5,10 @@ block content
   include navbar-photos
   
   .container.text-center
-    h1.display-3.my-5 Cute Photos
+    h1.display-3.mt-5.mb-4 Cute Photos
     .d-flex.justify-content-center
       form.col-6.mb-3(action="/photos", method="get")
-        .input-group
+        .input-group.mb-4
           input.form-control(class="flickr-search", name="query", type="search", placeholder="Search Photos...", aria-label="Search Photos", aria-describedby="basic-addon2")
           .input-group-append
             button.btn.btn-warning.text-light(type="submit") Search
