improved search bar sizing on smaller screens

--- a/views/photos.pug
+++ b/views/photos.pug
@@ -7,7 +7,7 @@ block content
   .container.text-center
     h1.display-3.mt-5.mb-4 Cute Photos
     .d-flex.justify-content-center
-      form.col-6.mb-3(action="/photos", method="get")
+      form.col-lg-6.col-sm-12.mb-3(action="/photos", method="get")
         .input-group.mb-4
           input.form-control(class="flickr-search", name="query", type="search", placeholder="Search Photos...", aria-label="Search Photos", aria-describedby="basic-addon2")
           .input-group-append
