--- a/views/gifs.pug
+++ b/views/gifs.pug
@@ -7,7 +7,7 @@ block content
   .container.text-center
     h1.display-3.mt-5.mb-4 Funny Gifs
     .d-flex.justify-content-center
-      form.col-6.mb-3(action="/gifs", method="get")
+      form.col-lg-6.col-sm-12.mb-3(action="/gifs", method="get")
         .input-group.mb-4
           input.form-control(class="giphy-search", name="query", type="search", placeholder="Search Gifs...", aria-label="Search Gifs", aria-describedby="basic-addon2")
           .input-group-append
