--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,48 @@ a:hover {
 .material-icons {
   font-size: 2.5rem;
 }
+
+/* Media Queries */
+@media (max-width: 576px) {
+  body {
+    padding: 25px;
+  }
+
+  p {
+    margin-bottom: .5rem;
+  }
+
+  h3 {
+    font-size: 1.35rem;
+  }
+
+  .container {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  .display-3 {
+    font-size: 1.95rem;
+  }
+
+  .lead {
+    font-size: .95rem;
+  }
+
+  .card-deck {
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+}
+
+/* @media (max-width: 768px) {
+  .display-3 {
+    font-size: 1.4rem;
+  }
+} */
+
+/* @media (max-width: 992px) {
+  .display-3 {
+    font-size: 1.6rem;
+  }
+} */
