--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
   .container.text-center
-    h1.display-3.mb-5= title
+    h1.display-3.mb-lg-5.mb-sm-3= title
     p.lead Positive emotion, or "happiness", has been proven to improve performance.
     p.lead Research has shown that when we are happy, our brains become more engaged, more creative, and more productive.
-    p.lead.mb-5 The Happiness Primer is here to deliver that extra boost of happiness whenever you need it.
-    h3.mb-3 What makes you happy?
+    p.lead.mb-lg-5.mb-sm-1 The Happiness Primer is here to deliver that extra boost of happiness whenever you need it.
+    h3.mb-lg-3.mb-sm-1 What makes you happy?
     .row
       .card-deck
         .card.bg-outline-dark
