added italic to source

--- a/views/quotes.pug
+++ b/views/quotes.pug
@@ -7,6 +7,6 @@ block content
   .container.text-center
     h1.display-3.mt-5.mb-3 "#{quotation}"
     .text-sm-right
-      h2 - #{source}
+      h2.font-italic - #{source}
     .justify-content-center.mt-5
       a.btn.btn-outline-light.btn-lg.bg-warning(href="/quotes") New Quote
