--- a/views/index.pug
+++ b/views/index.pug
@@ -20,4 +20,4 @@ block content
         .card
           img.card-img-top(src="/images/sandcastle.jpg", alt="image of dog")
           .card-body.bg-warning
-            a.btn.btn-outline-light.btn-lg(href="/quotes") Inspiring Qoutes
+            a.btn.btn-outline-light.btn-lg(href="/quotes") Inspiring Quotes
